# pdf-to-llm

./: README.md  pdf-to-llm.py  pyproject.toml
